--- a/README.org
+++ b/README.org
@@ -1,41 +1,21 @@
-#+TITLE: 九阴真经
+#+TITLE: 沁园春·雪
 #+AUTHOR: CONGPEITONG
 #+EMAIL: congpeitong2022@163.com
-* 上卷
-天之道，损有余而补不足，是故虚胜实，不足胜有余。其意博，其理奥，其趣深，天地之象分，阴阳之候列，变化之由表，死生之兆彰，不谋而遗迹自同，勿约而幽明斯契，稽其言有微，验之事不忒，诚可谓至道之宗，奉生之始矣。
 
-假若天机迅发，妙识玄通，成谋虽属乎生知，标格亦资于治训，未尝有行不由送，出不由产者亦。然刻意研精，探微索隐，或识契真要，则目牛无全，故动则有成，犹鬼神幽赞，而命世奇杰，时时间出焉。
+*沁园春·雪*
 
-五藏六府之精气，皆上注于目而为之精。精之案为眼，骨之精为瞳子，筋之精为黑眼，血之精力络，其案气之精为白眼，肌肉之精为约束，裹撷筋骨血气之精而与脉并为系，上属于脑，后出于项中。
+北国风光，千里冰封，万里雪飘。
 
-故校啃于项，因逢其身之虚，其人深，则随眼系以入于脑，入手腼则脑转，脑转则引目系急，目系急则目眩以转矣。邪其精，其精所中不相比亦则精散，精散则视岐，视岐见两物。
+望长城内外，惟余莽莽；大河上下，顿失滔滔。
 
-阴极在六，何以言九。太极生两仪，天地初刨判。六阴已极，逢七归元太素，太素西方金德，阴之清纯，寒之渊源。
-** 第一重诀
-子午卯酉四正时，归气丹田掌前推。面北背南朝天盘，意随两掌行当中。意注丹田一阳动，左右回收对两穴。拜佛合什当胸作，真气旋转贯其中。气行任督小周天，温养丹田一柱香。快慢合乎三十六，九阳神功第一重。每日子、午、卯、酉四正时，
-找一阴气重的地方，最好为四高中低。
+山舞银蛇，原驰蜡象，欲与天公试比高。
 
-面北而坐，五心朝天，静心绝虑，意守丹田，到一阳初动之时，双手在胸前合什，指尖朝前。
+须晴日，看银装素裹，分外妖娆。
 
-引丹田之气沿督脉上行，任脉下归丹田。如此待小周天三十六圈。由慢至快。气归丹田后，双掌前推，掌心向前，掌指朝天，气行两掌。双掌指下垂，掌指朝下，掌心朝下，迅速收回，左手掌心对准气海穴，右手掌心对准命门穴，真气随手式成螺旋状贯入气海、
-命门两穴。
+江山如此多娇，引无数英雄竞折腰。
 
-汇于丹田内。如此意守下丹田一柱香的时间。待此功练有一定功力，能收发自如，有抗寒之功时可修第二重。
+惜秦皇汉武，略输文采；唐宗宋祖，稍逊风骚。
 
-** 第二重决
-极寒午时正，独坐寒冰床。裸体面朝北，气行小周天。五心朝天式，打开丹田门。寒气螺旋入，收发当自如。合和汇丹田，落雪雪不化。缩如一寒珠，雪落无化雪。扩为雾环身，九阴第二重。每日午时，找一极寒之地，面北背南，五心朝天，
-坐于寒冰床上（一种玉、一年四季都如寒冰一样）。今人练习可在冰或雪上练习，静心绝虑，启动周天三十六圈，意守丹田片刻，打开气海、命门两穴，分别成螺旋状入寒气，吸一柱香的时间后，关闭以上两穴，丹田内有一寒球再不停的旋转，越转越大，
-至到隔体三丈远，收回。
+一代天骄，成吉思汗，只识弯弓射大雕。
 
-如此反复八十一次，练到雪花落体而不化，放气时雪花距体三尺不落为功成。
-
-** 第三重诀
-法如第二重，阴阳互相克。意在修罡气，热火不侵法。阳中求真阴，九阴第三重。每日子时，找一极热之地，坐于火鼎之上。
-
-面北背南，五心朝天，静心绝虑，起动丹田寒气防止热气侵入，其方法就是第二重所练寒气用以抗热量。此乃“真阳中求真阴”。
-
-** 第四重诀
-法如第三重，阴合阴为生。同为修罡气，静流极之法。以阴练真阴，九阴第四重。不拘时间，找一静止不动的水池，五心朝天，坐于湖底，静心绝虑，水位不过脖子，运行丹田真气用以抗水之压力，其方法与第三重相同，待体入水，而衣不湿为成。 然后找有
-流动河水中练，急流下练，而衣不湿为成。
-** 第五重诀
-采气不在气，口闭双目开。玄机在于目，神气乾鼎聚。
+俱往矣，数风流人物，还看今朝。
